azure-package/charts/umbrella-charts/templated.yaml
---
# Source: ondat/charts/etcd-cluster-operator/templates/Service-storageos-etcd-proxy.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: etcd-cluster-operator
    helm.sh/chart: etcd-cluster-operator-0.1.4
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: test-name
    app.kubernetes.io/version: v0.4.3
    control-plane: proxy
  name: storageos-etcd-proxy
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    control-plane: proxy
---
# Source: ondat/charts/ondat-operator/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
    chart: ondat-operator-0.7.3
    release: test-name
    heritage: Helm
  name: storageos-operator
  namespace: default
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
---
# Source: ondat/charts/ondat-operator/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    chart: ondat-operator-0.7.3
    release: test-name
    heritage: Helm
  name: storageos-operator-webhook
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
---
# Source: ondat/charts/etcd-cluster-operator/templates/Deployment-storageos-etcd-controller-manager.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: etcd-cluster-operator
    helm.sh/chart: etcd-cluster-operator-0.1.4
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: test-name
    app.kubernetes.io/version: v0.4.3
    control-plane: etcd-controller-manager
  name: storageos-etcd-controller-manager
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      control-plane: etcd-controller-manager
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        control-plane: etcd-controller-manager
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  control-plane: etcd-controller-manager
              topologyKey: kubernetes.io/hostname
      containers:
        - args:
            - --enable-leader-election
            - --proxy-url=storageos-proxy.default.svc
            - --leader-election-cm-namespace=default
            - --etcd-repository=quay.io/coreos/etcd
          command:
            - /manager
          image: docker.io/storageos/etcd-cluster-operator-controller:sha256:dc0d4415d575f5ddb8987b96ee48c2b2cf54a3b0f60b65f7c4dd6eec8a4c3e62
          name: manager
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 120Mi
      terminationGracePeriodSeconds: 10
---
# Source: ondat/charts/etcd-cluster-operator/templates/Deployment-storageos-etcd-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: etcd-cluster-operator
    helm.sh/chart: etcd-cluster-operator-0.1.4
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: test-name
    app.kubernetes.io/version: v0.4.3
    control-plane: proxy
  name: storageos-etcd-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: proxy
  template:
    metadata:
      labels:
        control-plane: proxy
    spec:
      containers:
        - args:
            - --api-port=8080
          image: docker.io/storageos/etcd-cluster-operator-proxy:sha256:6eb841afb457d4f14fd4992b1dced2369d4010a0dfe96ff4507e6d20de8f0926
          name: proxy
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 70m
              memory: 70Mi
      terminationGracePeriodSeconds: 10
---
# Source: ondat/charts/ondat-operator/templates/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-name-ondat-operator
  namespace: default
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
    chart: ondat-operator-0.7.3
    release: test-name
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ondat-operator
      app.kubernetes.io/component: operator
      control-plane: controller-manager
      release: test-name
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app: ondat-operator
        app.kubernetes.io/component: operator
        control-plane: controller-manager
        release: test-name
    spec:
      containers:
      - args:
        - --config=operator_config.yaml
        command:
        - /manager
        image: "docker.io/storageos/operator:sha256:613f1c98786d12b7bd04626de7117177eef889f0552b66653ff77c3b2f8ff0c2"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 250m
          requests:
            cpu: 10m
            memory: 600Mi
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /operator_config.yaml
          name: storageos-operator
          subPath: operator_config.yaml
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: "quay.io/brancz/kube-rbac-proxy:sha256:0aacdc5ba56fbcaa7534e928e38e42447194b1029f79d8cf869c5e3bddacb23e"
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
      securityContext:
        runAsUser: 65532
      serviceAccountName: storageos-operator
      terminationGracePeriodSeconds: 10
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/component: operator
            app: ondat-operator
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - configMap:
          name: storageos-operator
        name: storageos-operator
---
# Source: ondat/charts/ondat-operator/templates/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    chart: ondat-operator-0.7.3
    release: test-name
    heritage: Helm
  name: storageos-operator-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: storageos-operator-webhook
      namespace: default
      path: /validate-storageoscluster
  failurePolicy: Ignore
  name: cluster-validator.storageos.com
  rules:
  - apiGroups:
    - storageos.com
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - storageosclusters
  sideEffects: None
